Added some unit tests around BindableModel

--- a/owsi-core/owsi-core-components/owsi-core-component-wicket-more/bindgen.properties
+++ b/owsi-core/owsi-core-components/owsi-core-component-wicket-more/bindgen.properties
@@ -1,3 +1,3 @@
-scope=fr.openwide.core.wicket.more,fr.openwide.core.commons,java.util,java.lang
+scope=fr.openwide.core.test.wicket.more,fr.openwide.core.wicket.more,fr.openwide.core.commons,java.util,java.lang
 skipBindKeyword=true
 bindingPathSuperClass=fr.openwide.core.commons.util.binding.AbstractCoreBinding
