--- a/owsi-core/owsi-core-components/owsi-core-component-wicket-more/pom.xml
+++ b/owsi-core/owsi-core-components/owsi-core-component-wicket-more/pom.xml
@@ -107,6 +107,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 		<!-- Database pooling (tests) -->
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
