When user want to change his password, ask him for the old one before.

--- a/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/application/BasicApplicationApplicationResources.utf8.properties
+++ b/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/application/BasicApplicationApplicationResources.utf8.properties
@@ -43,6 +43,7 @@ administration.user.add.success=The user has been created.
 administration.user.add.success.notification=The user has been notified of the creation of his account.
 administration.user.update.title=Edit the user « ${fullName} »
 administration.user.update.success=The user has been created.
+administration.user.password.update.error.oldPassword=The old password is not correct.
 administration.user.form.userName.help=Only alphanumeric characters, dashes and underscores are accepted.
 administration.user.profile=Profile
 administration.user.groups.count.zero=No groups
