--- a/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/application/BasicApplicationApplicationResources_fr.utf8.properties
+++ b/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/application/BasicApplicationApplicationResources_fr.utf8.properties
@@ -57,6 +57,7 @@ administration.user.noUsers=Aucun utilisateur
 administration.user.password.update=Changer mdp.
 administration.user.password.update.title=Changement de mot de passe
 administration.user.password.update.success=Le nouveau mot de passe a bien été pris en compte.
+administration.user.password.update.error.oldPassword=L'ancien mot de passe est incorrect.
 administration.user.password.recovery.reset=Réinit. mdp.
 administration.user.password.recovery.reset.confirmation.title=Demande de réinitialisation de mot de passe
 administration.user.password.recovery.reset.confirmation.text=Êtes-vous sûr de vouloir envoyer une demande de réinitilisation de mot de passe à l'utilisateur « ${fullName} » ?
