--- a/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/business/BasicApplicationBusinessResources_fr.utf8.properties
+++ b/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/business/BasicApplicationBusinessResources_fr.utf8.properties
@@ -20,6 +20,7 @@ business.user.creationDate=Création
 business.user.lastLoginDate=Dernière connexion
 business.user.lastUpdateDate=Dernière modification
 business.user.password=Mot de passe
+business.user.oldPassword=Ancien mot de passe
 business.user.newPassword=Nouveau mot de passe
 business.user.confirmPassword=Confirmation
 business.user.locale=Langue
