--- a/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/business/BasicApplicationBusinessResources.utf8.properties
+++ b/basic-application/basic-application-webapp/src/main/java/fr/openwide/core/basicapp/web/application/resources/business/BasicApplicationBusinessResources.utf8.properties
@@ -20,6 +20,7 @@ business.user.creationDate=Created
 business.user.lastLoginDate=Last login
 business.user.lastUpdateDate=Last updated
 business.user.password=Password
+business.user.oldPassword=Old password
 business.user.newPassword=New password
 business.user.confirmPassword=Password confirmation
 business.user.locale=Language
