--- a/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/console/resources/CoreWicketConsoleResources.utf8.properties
+++ b/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/console/resources/CoreWicketConsoleResources.utf8.properties
@@ -212,3 +212,5 @@ console.maintenance.queuemanager.actions.start=Start
 console.maintenance.queuemanager.actions.start.succes=Le QueueTaskManager a bien été démarré
 console.maintenance.queuemanager.actions.stop=Stop
 console.maintenance.queuemanager.actions.stop.succes=Le QueueTaskManager a bien été arrêté
+console.maintenance.queuemanager.actions.emptyCache=Vider cache infinispan
+console.maintenance.queuemanager.actions.emptyCache.warning=Ne vider le cache Infinispan que lorsque les gestionnaires de tâches sont tous éteints
