Adding of button to clear cache

--- a/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/console/resources/CoreWicketConsoleResources.utf8.properties
+++ b/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/console/resources/CoreWicketConsoleResources.utf8.properties
@@ -214,3 +214,4 @@ console.maintenance.queuemanager.actions.stop=Stop
 console.maintenance.queuemanager.actions.stop.succes=Le QueueTaskManager a bien été arrêté
 console.maintenance.queuemanager.actions.emptyCache=Vider cache infinispan
 console.maintenance.queuemanager.actions.emptyCache.warning=Ne vider le cache Infinispan que lorsque les gestionnaires de tâches sont tous éteints
+console.maintenance.queuemanager.actions.emptyCache.confirm=« {0} » taches ont été vidées 
