--- a/owsi-core/owsi-core-dependencies/owsi-core-dependency-web-spring-security/pom.xml
+++ b/owsi-core/owsi-core-dependencies/owsi-core-dependency-web-spring-security/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>owsi-core-dependencies</artifactId>
 		<groupId>fr.openwide.core.dependencies</groupId>
-		<version>0.18-SNAPSHOT</version>
+		<version>0.17</version>
 	</parent>
 	
 	<artifactId>owsi-core-dependency-web-spring-security</artifactId>
