--- a/basic-application/basic-application-init/pom.xml
+++ b/basic-application/basic-application-init/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>basic-application</artifactId>
 		<groupId>fr.openwide.core.archetype</groupId>
-		<version>0.17</version>
+		<version>0.18-SNAPSHOT</version>
 	</parent>
 	
 	<packaging>jar</packaging>
