--- a/owsi-core/owsi-core-components/owsi-core-component-commons/pom.xml
+++ b/owsi-core/owsi-core-components/owsi-core-component-commons/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>fr.openwide.core.components</groupId>
 		<artifactId>owsi-core-components</artifactId>
-		<version>0.17</version>
+		<version>0.18-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>owsi-core-component-commons</artifactId>
