--- a/owsi-core/pom.xml
+++ b/owsi-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>fr.openwide.core</groupId>
 		<artifactId>owsi-core-parent</artifactId>
-		<version>0.17</version>
+		<version>0.18-SNAPSHOT</version>
 	</parent>
 	
 	<artifactId>owsi-core</artifactId>
